Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5991

memory leak on mount failure

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Trivial Trivial
    • Lustre 2.11.0
    • None
    • 4
    • 16713

      lustre_fill_super() allocates lsi and assumes that in case of failures server_fill_super() or ll_fill_super() will call server_put_super()/ll_put_super() to free the lsi. However,

      • server_fill_super() misses that when lsi_prepare() fails.
      • ll_fill_super() misses that when OBD_ALLOC_PTR(cfg) or
        ll_init_sbi() fail.

            wc-triage WC Triage
            vs Vladimir V. Saveliev
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: