LU-5991 obd: fix mount error handing

lustre_fill_super() allocates lsi and assumes that on failures lsi
will be freed by server_fill_super() or ll_fill_super().
- server_fill_super() does not free lsi when lsi_prepare() fails.
- ll_fill_super() does not free lsi when OBD_ALLOC_PTR(cfg) or
ll_init_sbi() fail.

Define lustre_put_lsi as EXPORT_SYMBOL and call it where appropriate

Xyratex-bug-id: MRP-2229
Signed-off-by: Vladimir Saveliev <vladimir.saveliev@seagate.com>
Change-Id: I366dc2b46a504a65b030bcbf687998dd0676f404