lustre/obdclass/obd_mount_server.c
@@ -1890,8 +1890,10 @@ int server_fill_super(struct super_block *sb)
 	OBD_RACE(OBD_FAIL_TGT_MOUNT_RACE);
 
 	rc = lsi_prepare(lsi);
-	if (rc)
+	if (rc) {
+		lustre_put_lsi(sb);
 		RETURN(rc);
+	}
 
 	/* Start low level OSD */
 	rc = osd_start(lsi, sb->s_flags);
